objects/EUR_CRM_Sales_Order_Items__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_AAV__c</fullName>
        <description>It&apos;s the discount % on bottles.

Update on 8/3/2016: it refers to a Number of Bottles. (SFASWI-68)</description>
        <label>AAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <formula>CASESAFEID( EUR_CRM_Sales_Order__r.EUR_CRM_Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Additional_Discount__c</fullName>
        <label>Additional Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AnimationCode__c</fullName>
        <formula>EUR_CRM_Deal__r.EUR_CRM_Deal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AppliedAnimationCommercial__c</fullName>
        <label>Commercial Condition Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Article_Number__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_Article_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Article_no__c</fullName>
        <formula>EUR_CRM_SKU__r.EUR_CRM_Article_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article no.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AvailableFreeQuantity__c</fullName>
        <label>Available Free Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BQS_Name__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_Brand_Quality_Size__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand-Quality-Size Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Child_Price_Book_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Price Book Item</label>
        <referenceTo>EUR_CRM_ProductCatalogItem__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU) (Child Price Book Item)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CountInParentBOM__c</fullName>
        <label>Count in parent BOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <formula>EUR_CRM_Sales_Order__r.EUR_CRM_Account__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date__c</fullName>
        <formula>EUR_CRM_Sales_Order__r.EUR_CRM_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DealAnimationCode__c</fullName>
        <label>DealPromotion code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Deal_Discount__c</fullName>
        <label>Deal Discount</label>
        <summarizedField>EUR_CRM_AppliedCC__c.EUR_CRM_Amount__c</summarizedField>
        <summaryForeignKey>EUR_CRM_AppliedCC__c.EUR_CRM_AppliedConditionOrderItemID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>EUR_CRM_Deal__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount_Amount__c</fullName>
        <description>Used in ZA Sales Orders and retrieved from Product Discount (EU) Table</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EAN_Bottle__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_EAN_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAN Bottle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ERP_Id__c</fullName>
        <label>Sales Order Item ERP Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID_Formula__c</fullName>
        <formula>IF( EUR_CRM_Sales_Order__r.RecordType.DeveloperName = &apos;EUR_Direct&apos;, EUR_CRM_Country__c +&apos;-&apos;+&apos;GC1&apos;+&apos;-&apos;+ EUR_CRM_Materialnumber__c,EUR_CRM_Materialnumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_FreeQuantity__c</fullName>
        <label>Free Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Free_Bottles__c</fullName>
        <label>Free Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Free_Deal_Codes__c</fullName>
        <label>Free Deal Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_GiftQuantity__c</fullName>
        <label>Gift Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indexed_Item_Total__c</fullName>
        <formula>EUR_CRM_Quantity__c  *  EUR_CRM_Indexed_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexed Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indexed_Unit_Price__c</fullName>
        <formula>EUR_CRM_Sales_Order__r.EUR_CRM_Account__r.EUR_CRM_Price_Index__c *  EUR_CRM_SKU__r.EUR_CRM_Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexed Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ItemCategory__c</fullName>
        <label>Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chargable</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Item_Total__c</fullName>
        <formula>EUR_CRM_Quantity__c * EUR_CRM_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_List_Price__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Materialnumber__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_ProductMN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Discount__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_Max_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Discount/btl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_ID__c</fullName>
        <description>technical field represents Mobile ID from Convivio. Use for checking for data duplication</description>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_NetPrice__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_NumberOfBOMComponents__c</fullName>
        <label>Components count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Value__c</fullName>
        <label>Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PBI_Mapping__c</fullName>
        <formula>IF( EUR_CRM_Sales_Order__r.RecordType.DeveloperName = &apos;EUR_Direct&apos;, EUR_CRM_Sales_Order__r.EUR_CRM_Country_Code__c+&apos;-&apos;+&apos;GC1&apos;+&apos;-&apos;+EUR_CRM_SKU_Code__c,EUR_CRM_SKU_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBI Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>Order Item (EU)</relationshipLabel>
        <relationshipName>Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ParentBOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent BOM</label>
        <referenceTo>EUR_CRM_Sales_Order_Items__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentDate__c</fullName>
        <label>PaymentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 monthes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PriceBookEntryID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_CRM_ProductCatalogItem__c.EUR_CRM_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_ProductCatalogItem__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductID__c</fullName>
        <formula>IF(
ISBLANK(EUR_CRM_PriceBookEntryID__c), EUR_CRM_SKU__r.Name,  EUR_CRM_PriceBookEntryID__r.EUR_CRM_ProductName__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromoGroups__c</fullName>
        <label>PromoGroups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromotionalDiscountAmount__c</fullName>
        <label>Promotional Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromotionalDiscount__c</fullName>
        <label>Promotional Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RemainingQuantity__c</fullName>
        <label>Remaining quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Code__c</fullName>
        <description>Initially for ZA to avoid querying SKU Code in Apex for Web Service Callout</description>
        <formula>EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_ID__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_Article_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Name__c</fullName>
        <formula>EUR_CRM_SKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_codeCT__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SAPCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_codeNEW__c</fullName>
        <formula>EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>EUR_CRM_Stock_Item__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_status__c</fullName>
        <formula>TEXT(EUR_CRM_PriceBookEntryID__r.EUR_CRM_SKU__r.EUR_CRM_Stock_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StructuralDiscountAmount__c</fullName>
        <label>Structural Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StructuralDiscount__c</fullName>
        <label>Structural Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TVA__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TaxesAmount__c</fullName>
        <label>Taxes Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Value__c</fullName>
        <formula>EUR_CRM_Quantity__c  *  EUR_CRM_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total__c</fullName>
        <description>The new field Total  will be the total of the following order components:

1. QTY
 2. AAV
 3. Free Bottles

(SFASWI-70)</description>
        <formula>EUR_CRM_AAV__c + EUR_CRM_Quantity__c + EUR_CRM_Free_Bottles__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Totallineamount__c</fullName>
        <label>Total line amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UnitNetPrice__c</fullName>
        <label>Unit Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UnitPrice__c</fullName>
        <label>Catalog Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit ID</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_DeliveryTimeCode__c</fullName>
        <formula>TEXT(EUR_CRM_Sales_Order__r.EUR_NIM_DeliveryTimeCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Time Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_PalletTypeCode__c</fullName>
        <label>Pallet Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                    <label>CCG1</label>
                </value>
                <value>
                    <fullName>C2</fullName>
                    <label>CCG1 EAN128</label>
                </value>
                <value>
                    <fullName>C3</fullName>
                    <label>UNGÜLTIG SEIT FEB 2016</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                    <label>CCG1 sortenrein Zwischen</label>
                </value>
                <value>
                    <fullName>C6</fullName>
                    <label>CCG1 sortenrein Zwischen EAN</label>
                </value>
                <value>
                    <fullName>E2</fullName>
                    <label>Euro sortenrein</label>
                </value>
                <value>
                    <fullName>E4</fullName>
                    <label>Euro Sortenrein Zwischen</label>
                </value>
                <value>
                    <fullName>E5</fullName>
                    <label>Euro Sortenrein Zwischen EAN</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>AV</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>Abholauftrag</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>Interner Auftrag</label>
                </value>
                <value>
                    <fullName>S4</fullName>
                    <label>Vernichtung</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_QuantityShipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Line Picked</fullName>
                </value>
                <value>
                    <fullName>Order Line Shipped</fullName>
                </value>
                <value>
                    <fullName>Order Line Out For Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order Item (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Sales_Order__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_Deal_Discount__c</columns>
        <columns>EUR_CRM_ItemCategory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_ZA</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_BG_Sales_Order_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Sales_Order__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>EUR_CRM_Unit__c</columns>
        <columns>EUR_CRM_Unit_Price__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order_Items__c.EUR_BG_Direct_Sales_Order_Item</value>
        </filters>
        <label>All BG Direct Sales Order Item</label>
        <language>en_ZA</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_PT_Sales_Order_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Sales_Order__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order_Items__c.EUR_PT_Indirect_On_Trade_Sales_Order_Items</value>
        </filters>
        <label>All PT Sales Order Item</label>
        <language>en_ZA</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Sales_Order__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>EUR_CRM_Deal_Discount__c</columns>
        <columns>EUR_CRM_ItemCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>,EUR_CRM_Sales_Order_Items__c.EUR_DK_Free_Goods_Order_Item_to_Customer,EUR_CRM_Sales_Order_Items__c.EUR_DK_Free_Goods_Order_from_SR_Stock</value>
        </filters>
        <label>EUR DK</label>
        <language>en_ZA</language>
        <sharedTo>
            <roleAndSubordinatesInternal>EUR_DK</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SOI-{0000000000}</displayFormat>
        <label>Sales Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR AO Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR AO Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Free_Goods_Directly_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR AT Free Goods Directly to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Free_Goods_from_SR_Stock_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR AT Free Goods from SR Stock to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Standard_Goods_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR AT Standard Goods Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Direct_Sales_Order_Item_from_Wholesaler</fullName>
        <active>true</active>
        <label>EUR BG Direct Sales Order Item from Wholesaler</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Indirect_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Indirect Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Indirect_Sales_Order_Item_from_Customer</fullName>
        <active>true</active>
        <label>EUR BG Indirect Sales Order Item from Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Marketing_Product_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Marketing Product Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR BG Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR CH Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR CH Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR DB Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_Indirect_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR DB Indirect Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Directly_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Free Goods Directly to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Order_from_SR_Stock</fullName>
        <active>false</active>
        <label>EUR DE Free Goods Order from SR Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_from_SR_Stock_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Free Goods from SR Stock to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Standard_Goods_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Standard Goods Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_Item_to_Customer</fullName>
        <active>true</active>
        <label>EUR DK Free Goods Order Item to Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_from_SR_Stock</fullName>
        <active>true</active>
        <label>EUR DK Free Goods Order from SR Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR DK Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR DK Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IDL_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR IDL Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IDL_Indirect_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR IDL Indirect Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR KE Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR KE Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Direct_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR MA Direct Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Direct_Sales_Oder_Item</fullName>
        <active>true</active>
        <label>EUR MA Direct Sales Oder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Indirect_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR MA Indirect Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Indirect_Sales_Oder_Item</fullName>
        <active>true</active>
        <label>EUR MA Indirect Sales Oder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR NG Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR NL Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_Indirect_Off_Trade_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR NL Indirect Off Trade Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_Indirect_Off_Trade_Sales_Order_Item_PR_Delivery</fullName>
        <active>true</active>
        <label>EUR NL Indirect Off Trade Sales Order Item PR Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_Indirect_On_Trade_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR NL Indirect On Trade Sales Order Item</label>
    </recordTypes>
</CustomObject>